--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 .button :hover {
   box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-  transition-duration: .1s;
+  transition-duration: 3s;
 }
 
 @media (min-width: 768px) {
